# easy-bitmap-pixel-editor

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build-guide.md  ebpe.cpp  qodana.yaml
.github/workflows/: build.yml  ci.yml  qodana_code_quality.yml
docs/: use_command_en-us.md  use_command_zh-cn.md
src/: bmpFile.cpp  bmpFile.h  cmdOpr.cpp  cmdOpr.h  ebpe.cpp  main.cpp  utils.cpp  utils.h
src/helpCommand/: helpCommand.h
src/utils/: rnd.cpp  rnd.h  utils.cpp  utils.h
